# assembler

./: .gitignore  .replit  CMakeLists.txt  Makefile  README  README.md  TODO_LIST  assembler
docs/: .gitignore  Makefile  analysis.md  assembler.tex  index.md
src/: asm.c  asm.h  assemble.c  assemble.h  instructions.c  instructions.h  main.c  parseline.c  parseline.h  pass2.c  pass2.h  srcfile.h  symtable.c  symtable.h  util.c  util.h
tests/: all.asm  kendall.asm  kendall.lst  kendall.rom  math.asm  math.z80  test.asm  test.sh  test.z80  test1.z80  test2.lst  test2.rom  test2.z80
tests/tables/: 1.asm  2.asm  3.asm
